# ChangeLog for net-im/twinkle
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/twinkle/ChangeLog,v 1.24 2007/01/06 15:47:48 drizzt Exp $

  06 Jan 2007; Timothy Redaelli <drizzt@gentoo.org>
  -files/twinkle-0.8-autoconfspeex.patch, -twinkle-0.8.ebuild,
  -twinkle-0.8.1.ebuild, -twinkle-0.9.ebuild, -twinkle-0.9-r1.ebuild,
  twinkle-0.9-r2.ebuild:
  s/einfo/elog/
  Removed old versions

*twinkle-0.9-r2 (12 Dec 2006)

  12 Dec 2006; Daniel Black <dragonheart@gentoo.org>
  +files/twinkle-0.9-memman.patch, +twinkle-0.9-r2.ebuild:
  upstream memory patch thanks to Zas

*twinkle-0.9-r1 (03 Nov 2006)

  03 Nov 2006; Daniel Black <dragonheart@gentoo.org>
  +files/twinkle-0.9-dtmf.patch, +files/twinkle-0.9-invite4xx.patch,
  +twinkle-0.9-r1.ebuild:
  upstream patch as per bug #153857 thanks to Christopher Covington

  09 Oct 2006; Daniel Black <dragonheart@gentoo.org> twinkle-0.9.ebuild:
  added desktop entry - bug #147999 thanks to Michiel de Bruijne

  09 Oct 2006; Daniel Black <dragonheart@gentoo.org> twinkle-0.9.ebuild:
  add post install message

*twinkle-0.9 (02 Oct 2006)

  02 Oct 2006; Daniel Black <dragonheart@gentoo.org> +twinkle-0.9.ebuild:
  version bump requested by genstef

  29 Jul 2006; Daniel Black <dragonheart@gentoo.org> twinkle-0.8.ebuild,
  twinkle-0.8.1.ebuild:
  remove duplicate depend on media-libs/speex as per bug #142082 thanks to
  throw_away_2002

  13 Jul 2006; Daniel Black <dragonheart@gentoo.org> -twinkle-0.5.ebuild,
  -twinkle-0.6.1.ebuild, -twinkle-0.6.2.ebuild, -twinkle-0.7.ebuild,
  -twinkle-0.7.1.ebuild, twinkle-0.8.1.ebuild:
  more accurate DEPEND statement for qt - ensures no qt4. Renabled qt check in
  configure just to be sure

*twinkle-0.8.1 (10 Jul 2006)

  10 Jul 2006; Daniel Black <dragonheart@gentoo.org> twinkle-0.8.ebuild,
  +twinkle-0.8.1.ebuild:
  version bump dedicated to Flameeyes

*twinkle-0.8 (06 Jul 2006)

  06 Jul 2006; Daniel Black <dragonheart@gentoo.org>