@@ -18,25 +18,33 @@ MD5 673e730e8de990818919a6b07735b6ba files/twinkle-0.9-memman.patch 1914
 RMD160 9a97f42c071aaa097d5166c352479fcb9591662d files/twinkle-0.9-memman.patch 1914
 SHA256 01f2a1a113bf572285221085389f9a7f9d540983f845793960a85d2505de3ce3 files/twinkle-0.9-memman.patch 1914
 DIST twinkle-0.9.tar.gz 1012524 RMD160 f6b8b70a9630687cf7f100c9dde888289d97f082 SHA1 b0ef83aa738ec5504f0d0785b9be868835344284 SHA256 22f536aaf6a7aa6870c31d03190b206509cfc8b6147c3af7080d6dbfa5a992b6
+DIST twinkle-1.0.tar.gz 1172116 RMD160 9dea2207c0c421931d5190d5382dbcda321e120e SHA1 47cf0a078d93be124bcdf3990d5504855069e018 SHA256 f3513deda4cf24f285d48538b2ccffca3ff2e936b942b71f30f7ac13896c58cc
 EBUILD twinkle-0.9-r2.ebuild 1538 RMD160 55b493cbad0e8137519299951d2f8772ce0fbc9e SHA1 3e0fcdecf122e0adc924cd4161e159afb2984424 SHA256 3eb524d47981852eb48a65c42573864aef8495f8fa56b3ccad945e72b6e96807
 MD5 832f4b1c5a19a11145124b8638d1192a twinkle-0.9-r2.ebuild 1538
 RMD160 55b493cbad0e8137519299951d2f8772ce0fbc9e twinkle-0.9-r2.ebuild 1538
 SHA256 3eb524d47981852eb48a65c42573864aef8495f8fa56b3ccad945e72b6e96807 twinkle-0.9-r2.ebuild 1538
-MISC ChangeLog 4674 RMD160 d3e1f5ee50fea7d0f5dddd0ec87e751e75c1e674 SHA1 f4488ffb2ac011a8f0a1240566c50d8833a0a078 SHA256 63c8cbd708e6e813465fbab673c30a7f4f9a51dd68edf46b7b0a0e9c699a8142
-MD5 0f04c23c14c73db17f6b325caa603714 ChangeLog 4674
-RMD160 d3e1f5ee50fea7d0f5dddd0ec87e751e75c1e674 ChangeLog 4674
-SHA256 63c8cbd708e6e813465fbab673c30a7f4f9a51dd68edf46b7b0a0e9c699a8142 ChangeLog 4674
+EBUILD twinkle-1.0.ebuild 1419 RMD160 4cd8c70a1b1ec7fa9a08b7831482d19d605c8c8f SHA1 0176f8d87212735a981ed0cbb40718ffc374ce8e SHA256 ba2f213a8eefd1f99d6b42285c5f95df2695df1d4477a450e94da9b9dfc85ca0
+MD5 bc888798817ed45aa4e15ac772aa152d twinkle-1.0.ebuild 1419
+RMD160 4cd8c70a1b1ec7fa9a08b7831482d19d605c8c8f twinkle-1.0.ebuild 1419
+SHA256 ba2f213a8eefd1f99d6b42285c5f95df2695df1d4477a450e94da9b9dfc85ca0 twinkle-1.0.ebuild 1419
+MISC ChangeLog 4797 RMD160 3ea93ed66cdd057f08adbf2cecf0a30dd80b5332 SHA1 b78532406ff867dbb6db94b4bf5be8ca486151be SHA256 b22bcfb294e64ce296d5eb29c88fc281f47def504000c9c89cfb22d3273dfaa7
+MD5 e79d1b9d92f8622d03187f1f777f0592 ChangeLog 4797
+RMD160 3ea93ed66cdd057f08adbf2cecf0a30dd80b5332 ChangeLog 4797
+SHA256 b22bcfb294e64ce296d5eb29c88fc281f47def504000c9c89cfb22d3273dfaa7 ChangeLog 4797
 MISC metadata.xml 458 RMD160 51da9f8eb28d451a724fa7b687894976057263c1 SHA1 789cc96e32af0b71920e2df2c8ab7f45c1e9279d SHA256 9ee142b0e5854bae9e0365b52f6f0cf00a3b428c0c199ccce029108d03f42996
 MD5 81380b5fa13f903ff321873d95ed35bb metadata.xml 458
 RMD160 51da9f8eb28d451a724fa7b687894976057263c1 metadata.xml 458
 SHA256 9ee142b0e5854bae9e0365b52f6f0cf00a3b428c0c199ccce029108d03f42996 metadata.xml 458
-MD5 e5ddcfe20d8949f3fb8cbabdd3f3736b files/digest-twinkle-0.9-r2 174
-RMD160 f15c040c9c44e5319445c49b11e7a7ce75a4d412 files/digest-twinkle-0.9-r2 174
-SHA256 1c975b4f067d2fcae86f86ab473b2435150349029fbd3bc29e6e1baa7fa0cbed files/digest-twinkle-0.9-r2 174
+MD5 6878c2315906eb2513bc498959415f2f files/digest-twinkle-0.9-r2 238
+RMD160 efa1199d4550bd36803280378c6cf64a5c94f9b3 files/digest-twinkle-0.9-r2 238
+SHA256 87da7cca46528de6459ae95978fae5b00aaf557a264996221caefbe0dfeaddd6 files/digest-twinkle-0.9-r2 238
+MD5 63d08c70ec336373855240e564d2d926 files/digest-twinkle-1.0 238
+RMD160 9a4bc267f47b3e826d3b02f3171ed1a78dc8f0d6 files/digest-twinkle-1.0 238
+SHA256 7932f0f2d3308d2e649abd5f5e03f040f20a5f7581decca76a8e4bef378f9496 files/digest-twinkle-1.0 238
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.1 (GNU/Linux)
+Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFFn8SuGDyatLGpTbYRAuwBAJ0cu5X7oAH6g32ucLtTAE5iLcb2GACeO2hn
-x8WmHYlNeEmongggdC/jkwc=
-=a+O3
+iD8DBQFFtxrFmdTrptrqvGERAlDwAJ9trDtSpUs5nDzL49YU/1Db1RhWSgCgi69z
+pJ8SXL4OC9kB4NSOTdGlOJA=
+=ruDu
 -----END PGP SIGNATURE-----
