@@ -1,2 +1,3 @@
+MD5 74ef85e9f4570cec10bd23d301f5549e twinkle-0.9.tar.gz 1012524
 RMD160 f6b8b70a9630687cf7f100c9dde888289d97f082 twinkle-0.9.tar.gz 1012524
 SHA256 22f536aaf6a7aa6870c31d03190b206509cfc8b6147c3af7080d6dbfa5a992b6 twinkle-0.9.tar.gz 1012524
