@@ -1,0 +1,3 @@
+MD5 3180475a8eade9918bc1299dcbfe1fcc twinkle-1.0.tar.gz 1172116
+RMD160 9dea2207c0c421931d5190d5382dbcda321e120e twinkle-1.0.tar.gz 1172116
+SHA256 f3513deda4cf24f285d48538b2ccffca3ff2e936b942b71f30f7ac13896c58cc twinkle-1.0.tar.gz 1172116
