@@ -1,6 +1,11 @@
 # ChangeLog for net-im/twinkle
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/twinkle/ChangeLog,v 1.24 2007/01/06 15:47:48 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/twinkle/ChangeLog,v 1.25 2007/01/24 08:36:55 dragonheart Exp $
+
+*twinkle-1.0 (24 Jan 2007)
+
+  24 Jan 2007; Daniel Black <dragonheart@gentoo.org> +twinkle-1.0.ebuild:
+  version bump
 
   06 Jan 2007; Timothy Redaelli <drizzt@gentoo.org>
   -files/twinkle-0.8-autoconfspeex.patch, -twinkle-0.8.ebuild,
